add dataloader and manual dataloader support

--- a/notebooks/forecast.ipynb
+++ b/notebooks/forecast.ipynb
@@ -297,10 +297,10 @@
     "eval_loader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, collate_fn=aurora_batch_collate_fn)\n",
     "\n",
     "print(f\"Creating Aurora model ...\")\n",
-    "model = Aurora(use_lora=False)  # Model is not fine-tuned.\n",
-    "model.load_checkpoint(\"microsoft/aurora\", \"aurora-0.25-pretrained.ckpt\")\n",
-    "# model = AuroraSmall()\n",
-    "# model.load_checkpoint(\"microsoft/aurora\", \"aurora-0.25-small-pretrained.ckpt\")\n",
+    "# model = Aurora(use_lora=False)  # Model is not fine-tuned.\n",
+    "# model.load_checkpoint(\"microsoft/aurora\", \"aurora-0.25-pretrained.ckpt\")\n",
+    "model = AuroraSmall()\n",
+    "model.load_checkpoint(\"microsoft/aurora\", \"aurora-0.25-small-pretrained.ckpt\")\n",
     "\n",
     "if torch.cuda.is_available(): device = \"cuda\"\n",
     "else: device = \"cpu\"\n",
@@ -868,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
