--- a/notebooks/forecast_toy.ipynb
+++ b/notebooks/forecast_toy.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/Users/eliotwalt/Documents/phd/code/aurora-benchmark/env/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -35,6 +35,7 @@
     "\n",
     "from aurora_benchmark.data import (\n",
     "    XRAuroraDataset, \n",
+    "    XRAuroraBatchedDataset,\n",
     "    aurora_batch_collate_fn, \n",
     "    aurora_batch_to_xr, \n",
     "    unpack_aurora_batch\n",
@@ -105,13 +106,16 @@
    ],
    "source": [
     "era5_surface_paths = [\n",
-    "    pzarr, pzarr, pzarr\n",
+    "    p, p, p\n",
+    "    #pzarr, pzarr, pzarr\n",
     "]\n",
     "era5_atmospheric_paths = [ # we will repeat on level dimension\n",
-    "    pzarr, pzarr, pzarr\n",
+    "    p, p, p\n",
+    "    #pzarr, pzarr, pzarr\n",
     "]\n",
     "era5_static_paths = [ # we will select the first time step\n",
-    "    pzarr, pzarr, pzarr\n",
+    "    p, p, p\n",
+    "    #pzarr, pzarr, pzarr\n",
     "]\n",
     "\n",
     "surf_vars = [\"2t\", \"msl\", \"10u\"]\n",
@@ -120,23 +124,23 @@
     "\n",
     "# Load the data into a single dataset with the same coords but multiple variables\n",
     "surface_dss = [\n",
-    "    #xr.open_dataset(path, engine=\"netcdf4\").rename({\"msl\": svar}).drop_vars(\"time_bnds\")\n",
+    "    xr.open_dataset(path, engine=\"netcdf4\").rename({\"msl\": svar}).drop_vars(\"time_bnds\")\n",
     "    #xr.open_dataset(path, engine=\"h5netcdf\").rename({\"msl\": svar}).drop_vars(\"time_bnds\")\n",
-    "    xr.open_zarr(path, chunks={\"time\": 50, \"latitude\": 180, \"longitude\": 360}).rename({\"msl\": svar})#.drop_vars(\"time_bnds\")\n",
+    "    #xr.open_zarr(path, chunks={\"time\": 50, \"latitude\": 180, \"longitude\": 360}).rename({\"msl\": svar})#.drop_vars(\"time_bnds\")\n",
     "    for path, svar in zip(era5_surface_paths, surf_vars)\n",
     "]\n",
     "surface_ds = xr.merge(surface_dss)\n",
     "atmospheric_dss = [\n",
-    "    #xr.open_dataset(path, engine=\"netcdf4\").rename({\"msl\": svar}).expand_dims({\"level\": [1000, 700, 250]}).drop_vars(\"time_bnds\")\n",
+    "    xr.open_dataset(path, engine=\"netcdf4\").rename({\"msl\": svar}).expand_dims({\"level\": [1000, 700, 250]}).drop_vars(\"time_bnds\")\n",
     "    #xr.open_dataset(path, engine=\"h5netcdf\").rename({\"msl\": svar}).expand_dims({\"level\": [1000, 700, 250]}).drop_vars(\"time_bnds\")\n",
-    "    xr.open_zarr(path, chunks={\"time\": 50, \"latitude\": 180, \"longitude\": 360, \"level\": 1}).rename({\"msl\": svar}).expand_dims({\"level\": [1000, 700, 250]})#.drop_vars(\"time_bnds\")\n",
+    "    #xr.open_zarr(path, chunks={\"time\": 50, \"latitude\": 180, \"longitude\": 360, \"level\": 1}).rename({\"msl\": svar}).expand_dims({\"level\": [1000, 700, 250]})#.drop_vars(\"time_bnds\")\n",
     "    for path, svar in zip(era5_atmospheric_paths, atmospheric_vars)\n",
     "]\n",
     "atmospheric_ds = xr.merge(atmospheric_dss)\n",
     "static_dss = [\n",
-    "    #\n",
+    "     xr.open_dataset(path, engine=\"netcdf4\").rename({\"msl\": svar}).isel(time=0).drop_vars(\"time_bnds\")\n",
     "    # xr.open_dataset(path, engine=\"h5netcdf\").rename({\"msl\": svar}).isel(time=0).drop_vars(\"time_bnds\")\n",
-    "    xr.open_zarr(path, chunks={\"latitude\": 180, \"longitude\": 360}).rename({\"msl\": svar}).isel(time=0)#.drop_vars(\"time_bnds\")\n",
+    "    #xr.open_zarr(path, chunks={\"latitude\": 180, \"longitude\": 360}).rename({\"msl\": svar}).isel(time=0)#.drop_vars(\"time_bnds\")\n",
     "    for path, svar in zip(era5_static_paths, static_vars)\n",
     "]\n",
     "static_ds = xr.merge(static_dss)\n",
@@ -177,35 +181,65 @@
     "eval_start =\"3d\"\n",
     "era5_base_frequency = \"1d\"\n",
     "forecast_horizon = \"1w\"\n",
+    "use_dataloader = True\n",
+    "eval_aggregation = \"1w\"\n",
+    "init_frequency = \"3.5d\"\n",
+    "verbose = True\n",
+    "drop_timestamps = False\n",
+    "persist = False\n",
+    "rechunk = False\n",
+    "output_dir = \"data/era5_wb2_forecasts/2021-2022-6h-1d-6w-1440x721_original_variables/\"\n",
     "\n",
     "warmup_steps = int(pd.Timedelta(eval_start) / pd.Timedelta(era5_base_frequency)) if eval_start is not None else 0\n",
     "forecast_steps = int(pd.Timedelta(forecast_horizon) / pd.Timedelta(era5_base_frequency))\n",
     "\n",
-    "dataset = XRAuroraDataset(\n",
-    "    surface_ds=surface_ds,\n",
-    "    atmospheric_ds=atmospheric_ds,\n",
-    "    static_ds=static_ds,\n",
-    "    init_frequency=\"1d\",\n",
-    "    forecast_horizon=forecast_horizon,\n",
-    "    num_time_samples=2, # Aurora has fixed history length of 2...\n",
-    "    drop_timestamps=True,\n",
-    "    persist=False,\n",
-    "    rechunk=False,\n",
-    "    atmospheric_variables=atmospheric_vars,\n",
-    "    surface_variables=surf_vars,\n",
-    "    static_variables=static_vars,\n",
-    ")\n",
+    "if use_dataloader:\n",
+    "    dask.config.set(scheduler='synchronous')\n",
     "\n",
-    "eval_loader = DataLoader(\n",
-    "    dataset, \n",
-    "    batch_size=batch_size, \n",
-    "    collate_fn=aurora_batch_collate_fn,\n",
-    "    num_workers=num_workers,\n",
-    "    pin_memory=False\n",
-    ")\n",
+    "if use_dataloader:\n",
+    "        verbose_print(verbose, f\"Creating XRAuroraDataset and DataLoader...\")\n",
+    "        dataset = XRAuroraDataset(\n",
+    "            surface_ds=surface_ds,\n",
+    "            atmospheric_ds=atmospheric_ds,\n",
+    "            static_ds=static_ds,\n",
+    "            init_frequency=init_frequency,\n",
+    "            forecast_horizon=forecast_horizon,\n",
+    "            num_time_samples=2, # Aurora has fixed history length of 2...\n",
+    "            drop_timestamps=drop_timestamps,\n",
+    "            persist=persist,\n",
+    "            rechunk=rechunk\n",
+    "        )\n",
+    "        verbose_print(verbose, f\"Loaded dataset of length {len(dataset)} (drop_timestamps={drop_timestamps}, persist={persist}, rechunk={rechunk})\")\n",
+    "        \n",
+    "        num_workers = 1 #int(os.getenv('SLURM_CPUS_PER_TASK', 1))+2 if os.getenv('SLURM_CPUS_PER_TASK') is not None else os.cpu_count()+2\n",
+    "        verbose_print(verbose, f\"Creating DataLoader with {num_workers} workers ...\")\n",
+    "        eval_loader = DataLoader(\n",
+    "            dataset, \n",
+    "            batch_size=batch_size, \n",
+    "            collate_fn=aurora_batch_collate_fn,\n",
+    "            num_workers=num_workers,\n",
+    "        )\n",
+    "        batch_iterator = eval_loader\n",
+    "    else:\n",
+    "        # This is done to avoid the issue with torch DataLoader and dask\n",
+    "        # when using netcdf files (i.e. netcdf backend is not thread safe)\n",
+    "        verbose_print(verbose, f\"Creating XRAuroraBatchedDataset ...\")\n",
+    "        dataset = XRAuroraBatchedDataset(\n",
+    "            batch_size=batch_size,\n",
+    "            surface_ds=surface_ds,\n",
+    "            atmospheric_ds=atmospheric_ds,\n",
+    "            static_ds=static_ds,\n",
+    "            init_frequency=init_frequency,\n",
+    "            forecast_horizon=forecast_horizon,\n",
+    "            num_time_samples=2, # Aurora has fixed history length of 2...\n",
+    "            drop_timestamps=drop_timestamps,\n",
+    "            persist=persist,\n",
+    "            rechunk=rechunk\n",
+    "        )\n",
+    "        batch_iterator = dataset\n",
     "\n",
     "print(\"Dataset length:\", len(dataset))\n",
-    "print(\"Dataloader length:\", len(eval_loader))"
+    "print(\"Dataloader length:\", len(batch_iterator))"
    ]
   },
   {
@@ -266,23 +300,15 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "print(\"loading model ...\")\n",
-    "# aurora_model = \"aurora-0.25-pretrained.ckpt\"\n",
-    "# model = Aurora(use_lora=False)\n",
-    "# model.load_checkpoint(\"microsoft/aurora\", aurora_model)\n",
-    "# model = model.to(device)\n",
+    "aurora_model = \"aurora-0.25-pretrained.ckpt\"\n",
+    "model = Aurora(use_lora=False)\n",
+    "model.load_checkpoint(\"microsoft/aurora\", aurora_model)\n",
+    "model = model.to(device)\n",
     "\n",
     "print(f\"Evaluating on {device}\")\n",
     "# evaluation loop\n",
     "xr_preds = {\"surface_ds\": [], \"atmospheric_ds\": []}\n",
     "with torch.inference_mode() and torch.no_grad():\n",
-    "    \n",
-    "    ## MANUAL DATALOADING\n",
-    "    \n",
-    "    # print(f\"DEBUGGING: Manual dataloading\")\n",
-    "    # batch_size = 1\n",
-    "    # for i, batch in enumerate(dataset):\n",
-    "        \n",
-    "    \n",
     "    for i, batch in enumerate(eval_loader):\n",
     "        batch = batch.to(device)\n",
     "        # rollout until for forecast_steps\n",
@@ -328,39 +354,43 @@
     "                else:\n",
     "                    vars_ds = vars_ds[vars_interest_variables]\n",
     "                \n",
-    "                # add lead time\n",
-    "                vars_ds = vars_ds.assign_coords({\"lead_time\": vars_ds.time.values - np.datetime64(init_time)})\n",
-    "                vars_ds = vars_ds.set_index({\"lead_time\": \"lead_time\"})\n",
-    "                \n",
-    "                # TODO: aggregate desired timesteps to agg freq  \n",
-    "                # vars_ds = vars_ds.resample(time=eval_aggregation).mean()  # not enough as it messes with \"lead time\"                    \n",
-    "                \n",
-    "                # append to predictions\n",
-    "                xr_preds[var_type].append(vars_ds)\n",
-    "        \n",
-    "# merge predictions and save\n",
-    "for var_type, var_ds_list in xr_preds.items():\n",
-    "    ds = xr.concat(var_ds_list, dim=\"time\").rename(INVERTED_AURORA_VARIABLE_RENAMES[var_type])"
+    "                # aggregate at eval_agg frequency\n",
+    "                    # use pd.Timedelta to avoid xarray automatically starting the resampling \n",
+    "                    # on Mondays for weekly etc.\n",
+    "                    # Note that resulting'time' will be the first timestamp in the aggregated period\n",
+    "                    var_ds = var_ds.resample(time=pd.Timedelta(eval_aggregation), origin=init_time).mean()\n",
+    "                    \n",
+    "                    # per-variable processing\n",
+    "                    for var in var_ds.data_vars:\n",
+    "                        # add lead time\n",
+    "                        sub_ds = var_ds[var].to_dataset(name=var)\n",
+    "                        sub_ds = sub_ds.assign_coords( {\"lead_time\": sub_ds.time.values - np.datetime64(init_time)})\n",
+    "                        sub_ds = sub_ds.set_index({\"lead_time\": \"lead_time\"})\n",
+    "                        \n",
+    "                        # save\n",
+    "                        path = f\"forecast_{var}_\" + \"-\".join([\n",
+    "                            init_time.strftime(\"%Y%m%dT%H%M%S\"),\n",
+    "                            str(era5_base_frequency),\n",
+    "                            str(eval_aggregation),\n",
+    "                            str(eval_start),\n",
+    "                            str(forecast_horizon),\n",
+    "                            str(var_ds.sizes[\"longitude\"])+ \"x\" +str(var_ds.sizes[\"latitude\"]),\n",
+    "                        ]) + \".nc\"\n",
+    "                        path = os.path.join(output_dir, path)\n",
+    "                        verbose_print(verbose, f\"   * Saving new {var_type} forecast: {path}\")\n",
+    "                        xr_to_netcdf(\n",
+    "                            sub_ds, path, \n",
+    "                            precision=\"float32\", \n",
+    "                            compression_level=1, \n",
+    "                            sort_time=False, \n",
+    "                            exist_ok=True\n",
+    "                        )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_gpu",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
